force-app/main/default/objects/Internship_Rotation__c/Internship_Rotation__c.object-meta.xml
<CustomObject>
    <label>Internship Rotation</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Internship Rotation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Internship Rotations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>