force-app/main/default/objects/Internship_Rotation__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Internship Rotations</relationshipLabel>
    <relationshipName>Internship_Rotations</relationshipName>
    <type>Lookup</type>
</CustomField>