force-app/main/default/objects/Internship_Rotation__c/fields/Department_Name__c.field-meta.xml
<CustomField>
    <fullName>Department_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Department Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>