force-app/main/default/objects/Internship_Rotation__c/fields/Internship__c.field-meta.xml
<CustomField>
    <fullName>Internship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internship</label>
    <referenceTo>Internship__c</referenceTo>
    <relationshipLabel>Internship Rotations</relationshipLabel>
    <relationshipName>Internship_Rotations</relationshipName>
    <type>Lookup</type>
</CustomField>